jaxws-calculator/eks_cicd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: cluster-2
    app.kubernetes.io/instance: cluster-2-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: cluster-2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-2
  template:
    metadata:
      labels:
        app: cluster-2
    spec:
      containers:
        - image: 737971166371.dkr.ecr.us-east-1.amazonaws.com/jaxws-calculator:latest
          imagePullPolicy: Always
          name: jaxws-calculator
          ports:
            - containerPort: 8080
