jaxws-calculator/eks_cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cluster-2
    app.kubernetes.io/instance: cluster-2-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: cluster-2
spec:
  selector:
    app: cluster-2
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8080
